# SurgeonAgent_public

./: .gitignore  README.md  log_visualizer.py  pyproject.toml
agent/: llm.py
assets/clo_xml/: Chest smearing.xml  Double-layered shorts.xml  Fashionable suit.xml  Loose mid-length pants for ladies.xml  Sleeveless short sleeves.xml  Super long pants.xml  White suit.xml  blouse-new.xml  blouse.xml  dress.xml  dress_1.xml  dress_2.xml  lady shoulder.xml  new_dress.xml  single-layered shorts.xml  update-Tshirt.xml  white_tshirt.xml
assets/haoda_json_image/Chest smearing/: output.json
assets/haoda_json_image/Sleeveless short sleeves/: output.json
assets/haoda_json_image/Tshirt/: output.json
config/: b1_baseline.yaml  b1_baseline_mimo.yaml  l1_designer.yaml  l1_transcriber.yaml  l2_reviewer.yaml  l2_writer.yaml  l2_writer_notools.yaml  load_config.py
prompts/: b1_baseline.txt  l1_designer.txt  l1_transcriber.txt  l2_reviewer.txt  l2_writer.txt  l2_writer_notools.txt
scripts/: _run_one.sh  aggregate_l2_runs.py  run_all_parallel.sh  run_b1_per_bin.sh  run_l2_per_bin.sh  run_l2_x5.sh
splits/: split_stats.json  test.txt  test_meta.json  train.txt
templates/: base.html  index.html  session.html
tools/: __init__.py  pattern_validator.py  registry.py  tools.py
utils/: build_split.py  build_vector_index.py  image.py  pattern.py  vector_index.py  visualize.py  xml_to_json.py
utils/eval/: metrics.py  run_b1.py  run_l2.py
utils/l1/: derive.py  derive_tools.py  validator.py
utils/l2/: loop.py  render.py  reviewer.py  writer.py  writer_notools.py
(+7 files in other folders)
